BACKLOG-3926 - CE doesn't start due to the new option we added in the EE to handle the xms, xmx https://jira.jahia.org/browse/BACKLOG-3926
Bring back JVM memory options overwritten by occasion during Tomcat upgrade

git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@627 39555585-ee67-472c-bf1e-947fb1f6b7c6